// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture-loader > fixture snapshots > should match JavaScript project configuration 1`] = `
{
  "hasNativeWind": true,
  "package": {
    "dependencies": {
      "expo": "~49.0.0",
      "nativewind": "^2.0.11",
      "react": "18.2.0",
      "react-native": "0.72.6",
    },
    "devDependencies": {
      "@babel/core": "^7.20.0",
      "tailwindcss": "^3.3.2",
    },
    "main": "index.js",
    "name": "javascript-test-app",
    "version": "1.0.0",
  },
  "typescript": false,
}
`;

exports[`fixture-loader > fixture snapshots > should match TypeScript project configuration 1`] = `
{
  "package": {
    "dependencies": {
      "expo": "~49.0.0",
      "nativewind": "^2.0.11",
      "react": "18.2.0",
      "react-native": "0.72.6",
    },
    "devDependencies": {
      "@types/react": "~18.2.14",
      "tailwindcss": "^3.3.2",
      "typescript": "^5.1.3",
    },
    "main": "index.js",
    "name": "typescript-test-app",
    "version": "1.0.0",
  },
  "tsconfig": {
    "compilerOptions": {
      "baseUrl": ".",
      "paths": {
        "@/*": [
          "./*",
        ],
      },
      "strict": true,
    },
    "extends": "expo/tsconfig.base",
  },
  "typescript": true,
}
`;

exports[`fixture-loader > fixture snapshots > should match bare React Native project structure 1`] = `
{
  "hasTypeScript": true,
  "isBareRN": true,
  "isExpo": false,
  "package": {
    "dependencies": {
      "react": "18.2.0",
      "react-native": "0.72.6",
    },
    "devDependencies": {
      "@babel/core": "^7.20.0",
      "@babel/preset-env": "^7.20.0",
      "@babel/runtime": "^7.20.0",
      "@types/react": "^18.0.24",
      "typescript": "4.8.4",
    },
    "name": "bare-rn-test-app",
    "private": true,
    "scripts": {
      "android": "react-native run-android",
      "ios": "react-native run-ios",
      "start": "react-native start",
    },
    "version": "0.0.1",
  },
}
`;

exports[`fixture-loader > fixture snapshots > should match expo project structure 1`] = `
{
  "appJson": {
    "expo": {
      "android": {
        "adaptiveIcon": {
          "backgroundColor": "#ffffff",
          "foregroundImage": "./assets/adaptive-icon.png",
        },
      },
      "assetBundlePatterns": [
        "**/*",
      ],
      "icon": "./assets/icon.png",
      "ios": {
        "supportsTablet": true,
      },
      "name": "expo-test-app",
      "orientation": "portrait",
      "slug": "expo-test-app",
      "splash": {
        "backgroundColor": "#ffffff",
        "image": "./assets/splash.png",
        "resizeMode": "contain",
      },
      "userInterfaceStyle": "light",
      "version": "1.0.0",
    },
  },
  "hasNativeWind": true,
  "hasTypeScript": true,
  "isExpo": true,
  "package": {
    "dependencies": {
      "expo": "~49.0.0",
      "expo-status-bar": "~1.6.0",
      "nativewind": "^2.0.11",
      "react": "18.2.0",
      "react-native": "0.72.6",
    },
    "devDependencies": {
      "@babel/core": "^7.20.0",
      "@types/react": "~18.2.14",
      "tailwindcss": "^3.3.2",
      "typescript": "^5.1.3",
    },
    "main": "node_modules/expo/AppEntry.js",
    "name": "expo-test-app",
    "scripts": {
      "android": "expo start --android",
      "ios": "expo start --ios",
      "start": "expo start",
    },
    "version": "1.0.0",
  },
}
`;

exports[`fixture-loader > fixture snapshots > should match with-aliases configuration 1`] = `
{
  "components": {
    "aliases": {
      "components": "@/components",
      "ui": "@/components/ui",
      "utils": "@/lib/utils",
    },
    "style": "nativewind",
    "tailwind": {
      "config": "tailwind.config.js",
      "css": "global.css",
    },
    "typescript": true,
  },
  "package": {
    "dependencies": {
      "expo": "~49.0.0",
      "nativewind": "^2.0.11",
      "react": "18.2.0",
      "react-native": "0.72.6",
      "react-native-gesture-handler": "~2.12.0",
      "react-native-reanimated": "~3.3.0",
    },
    "devDependencies": {
      "@types/react": "~18.2.14",
      "tailwindcss": "^3.3.2",
      "typescript": "^5.1.3",
    },
    "main": "index.js",
    "name": "test-app-with-aliases",
    "scripts": {
      "start": "expo start",
    },
    "version": "1.0.0",
  },
  "tsconfig": {
    "compilerOptions": {
      "baseUrl": ".",
      "paths": {
        "@/components/*": [
          "./components/*",
        ],
        "@/lib/*": [
          "./lib/*",
        ],
        "@/utils/*": [
          "./lib/utils/*",
        ],
      },
      "strict": true,
    },
    "extends": "expo/tsconfig.base",
  },
}
`;

exports[`fixture-loader > fixture snapshots > should match without-aliases configuration 1`] = `
{
  "package": {
    "dependencies": {
      "expo": "~49.0.0",
      "react": "18.2.0",
      "react-native": "0.72.6",
    },
    "devDependencies": {
      "@types/react": "~18.2.14",
      "typescript": "^5.1.3",
    },
    "main": "index.js",
    "name": "test-app-without-aliases",
    "scripts": {
      "start": "expo start",
    },
    "version": "1.0.0",
  },
  "tsconfig": {
    "compilerOptions": {
      "strict": true,
    },
    "extends": "expo/tsconfig.base",
  },
}
`;
